mechanism in jacsservicedao to only retrieve preassigned work

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -72,7 +72,8 @@ service.queue.id={env.HOSTNAME}
 service.queue.MaxCapacity=100
 service.queue.InitialDelayInSeconds=30
 service.queue.PeriodInSeconds=10
-service.defaultProcessor.queue.id={service.queue.id}
+service.defaultSubmission.queue.id={service.queue.id}
+service.queue.getOnlyPreAssignedWork=false
 
 service.exejob.checkIntervalInMillis=0
 
