only allow 1 java based cds

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -85,6 +85,7 @@ service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
 service.fijiMacro.maxRunningProcesses=1
 service.mergeChannels.maxRunningProcesses=2
+service.javaProcessColorDepthFileSearch.maxRunningProcesses=1
 
 service.defaultProcessingLocation=LOCAL
 service.lsmFileMetadata.defaultProcessingLocation=LOCAL
