refactored spark launcher; lsmimageresource

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -99,15 +99,15 @@ StorageService.ApiKey=
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs2/executables
 
 # Spark services
-service.spark.sparkVersion=2.3.1
-service.spark.sparkHomeDir=/misc/local/spark-{service.spark.sparkVersion}
-service.spark.lsf.application=spark32
-service.spark.lsf.spec=-q spark32
-service.spark.lsf.remoteCommand=commandstring
+service.spark.sparkHomeDir=/misc/local/spark-2.3.1
+service.spark.startCommand=spark-class
+service.spark.sparkMasterClass=org.apache.spark.deploy.master.Master
+service.spark.sparkWorkerClass=org.apache.spark.deploy.worker.Worker
+service.spark.lsf.spec=-q test
 service.spark.nodeSlots=32
 service.spark.driver.memory=1g
-service.spark.executor.memory=50g
 service.spark.executor.cores=5
+service.spark.executor.core.memoryGB=15
 service.spark.cluster.hard.duration.mins=1440
 service.spark.log4jconfig.filepath={Executables.ModuleBase}/colormipsearch/log4j.properties
 service.spark.cluster.startTimeoutInSeconds=3600
@@ -116,8 +116,8 @@ hadoop.homeDir=/misc/local/hadoop-2.6.4
 
 # Color depth search
 service.colorDepthSearch.searchTimeoutInSeconds=3600
-service.colorDepthSearch.minNodes=1
-service.colorDepthSearch.maxNodes=8
+service.colorDepthSearch.minWorkers=1
+service.colorDepthSearch.maxWorkers=48
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-2.7.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
