use hard job duration for color depth search jobs; remove the queue test

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -80,6 +80,7 @@ service.exejob.checkIntervalInMillis=0
 service.cluster.checkIntervalInSeconds=5
 service.cluster.requiresAccountInfo=true
 service.cluster.useJobGroup=false
+service.cluster.queue=
 
 service.maxRunningProcesses=-1
 service.fileCopy.maxRunningProcesses=2
@@ -103,7 +104,7 @@ service.spark.sparkHomeDir=/misc/local/spark-2.3.1
 service.spark.startCommand=spark-class
 service.spark.sparkMasterClass=org.apache.spark.deploy.master.Master
 service.spark.sparkWorkerClass=org.apache.spark.deploy.worker.Worker
-service.spark.lsf.spec=-q test
+service.spark.lsf.spec=
 service.spark.driver.memory=1g
 service.spark.executor.cores=5
 service.spark.executor.core.memoryGB=15
