--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -118,6 +118,7 @@ hadoop.homeDir=/misc/local/hadoop-2.6.4
 service.colorDepthSearch.searchTimeoutInSeconds=3600
 service.colorDepthSearch.minWorkers=1
 service.colorDepthSearch.maxWorkers=-1
+service.colorDepthSearch.coresPerSparkWorker=5
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-2.7.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
 
