--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -112,7 +112,7 @@ service.spark.cluster.hard.duration.mins=1440
 service.spark.log4jconfig.filepath={Executables.ModuleBase}/colormipsearch/log4j.properties
 service.spark.cluster.startTimeoutInSeconds=3600
 service.spark.cluster.intervalCheckInMillis=2000
-hadoop.homeDir=/misc/local/hadoop-2.6.4
+hadoop.homeDir=
 
 # Color depth search
 service.colorDepthSearch.searchTimeoutInSeconds=3600
