configured spark 3.0.1 because 2.3.1 was removed; also for now unset hadoop home because that is not available

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -100,7 +100,7 @@ StorageService.ApiKey=
 Executables.ModuleBase=/groups/jacs/jacsHosts/servers/jacs2/executables
 
 # Spark services
-service.spark.sparkHomeDir=/misc/local/spark-2.3.1
+service.spark.sparkHomeDir=/misc/local/spark-3.0.1
 service.spark.startCommand=spark-class
 service.spark.sparkMasterClass=org.apache.spark.deploy.master.Master
 service.spark.sparkWorkerClass=org.apache.spark.deploy.worker.Worker
@@ -112,7 +112,7 @@ service.spark.cluster.hard.duration.mins=1440
 service.spark.log4jconfig.filepath={Executables.ModuleBase}/colormipsearch/log4j.properties
 service.spark.cluster.startTimeoutInSeconds=3600
 service.spark.cluster.intervalCheckInMillis=2000
-hadoop.homeDir=/misc/local/hadoop-2.6.4
+hadoop.homeDir=
 
 # Color depth search
 service.colorDepthSearch.searchTimeoutInSeconds=3600
