created EM skeleton synchronizer

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -121,6 +121,7 @@ service.colorDepthSearch.maxWorkers=-1
 service.colorDepthSearch.coresPerSparkWorker=5
 service.colorDepthSearch.jarPath={Executables.ModuleBase}/colormipsearch/colormipsearch-2.7.0-jar-with-dependencies.jar
 service.colorDepthSearch.filepath=/nrs/jacs/jacsData/filestore/system/ColorDepthMIPs
+service.emSkeletons.filepath=/nrs/jacs/jacsData/filestore/system/EMSkeletons
 
 # External executables
 Perl.Path=/misc/sc/jacs-perl/bin/perl
