--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ subprojects {
             maven {
                 url "https://nexus.janelia.org/repository/maven-snapshots"
             }
+            maven {
+                url "https://maven.scijava.org/content/groups/public"
+            }
             flatDir {
                 dirs "${rootDir}/projectrepository"
             }
