--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -235,6 +235,7 @@ Solr.MainCore=FlyWorkstation
 Solr.BuildCore=FlyWorkstationBuild
 Solr.LoaderQueueSize=100
 Solr.LoaderThreadCount=2
+Solr.ConnectionTimeoutMillis=600000
 Solr.BatchSize=20000
 
 # Messaging parameters
