--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -33,16 +33,13 @@ MongoDB.ServerName=
 MongoDB.Database=jacs
 MongoDB.AuthDatabase=
 MongoDB.FutureDatabase=jacs2
+MongoDB.ReplicaSet=
 MongoDB.Username=
 MongoDB.Password=
 MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
 MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
 MongoDB.MaxWaitTimeInSecs=120
-
-mouselight.db.url=jdbc:mariadb://flyportal-db.int.janelia.org:3306/flyportal?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&autoReconnect=true
-mouselight.db.user=
-mouselight.db.password=
 
 sage.db.url=jdbc:mariadb://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
 sage.db.user=
