--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -41,7 +41,7 @@ MongoDB.ConnectionsPerHost=500
 MongoDB.ConnectTimeout=120000
 MongoDB.MaxWaitTimeInSecs=120
 
-sage.db.url=jdbc:mariadb://mysql3:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
+sage.db.url=jdbc:mariadb://sage-db:3306/sage?useCursorFetch=true&rewriteBatchedStatements=true&useServerPrepStmts=true&cachePrepStmts=true&serverTimezone=EST&autoReconnect=true
 sage.db.user=
 sage.db.password=
 
