changes from dev

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -33,6 +33,7 @@ MongoDB.ServerName=
 MongoDB.Database=jacs
 MongoDB.AuthDatabase=
 MongoDB.FutureDatabase=jacs2
+MongoDB.ReplicaSet=
 MongoDB.Username=
 MongoDB.Password=
 MongoDB.ThreadsAllowedToBlockForConnectionMultiplier=10
