--- a/jacs2-syncweb/build.gradle
+++ b/jacs2-syncweb/build.gradle
@@ -10,7 +10,9 @@ project(":jacs2-syncweb") {
         implementation project(":jacs2-commonweb"),
                        CDI_SE_CORE_LIB,
                        JACKSON_JAXRS_XML_PROVIDER,
-                       SOLR_SEARCH_LIB
+                       SOLR_SEARCH_LIB,
+                       JACS_MESSAGING_CORE_LIB,
+                       JACS_MESSAGING_BROKER_LIB
 
         testImplementation project(path: ":jacs2-commonweb", configuration: "testArtifacts")
     }
