--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -244,6 +244,8 @@ Messaging.User=
 Messaging.Password=
 Messaging.AsyncIndexingExchange=DocIndexUpdates
 Messaging.AsyncIndexingRoutingKey=
+Messaging.HortaSharedDataExchange=ModelUpdates
+Messaging.HortaSharedDataRoutingKey=brokerqueue
 
 #service.email.senderEmail=
 #service.email.senderPassword=
