case insensitive username for authentication

--- a/jacs2-services/src/main/resources/jacs.properties
+++ b/jacs2-services/src/main/resources/jacs.properties
@@ -15,6 +15,7 @@ LDAP.TimeOut=5000
 LDAP.AttributeFirstName=givenName
 LDAP.AttributeLastName=sn
 LDAP.AttributeEmail=mail
+LDAP.AttributeName=name
 LDAP.AttributeDistinguishedName=distinguishedname
 
 #
