--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ allprojects {
     apply plugin: 'idea'
     apply plugin: 'eclipse'
     group = 'org.janelia.jacs2'
-    version = '9.19'
+    version = '9.20.0-RC1'
 }
 
 project.ext {
