--- a/jacs2-services/build.gradle
+++ b/jacs2-services/build.gradle
@@ -30,7 +30,8 @@ project(":jacs2-services") {
                        JAVA_EXP_IMPL_LIB,
                        JAVA_LSF_LIB,
                        JAVAMAIL_LIB,
-                       MONGODB_DRIVER_LIB,
+                       MONGODB_SYNC_DRIVER_LIB,
+                       MONGODB_LEGACY_DRIVER_LIB,
                        REFLECTIONS_LIB,
                        SOLR_SEARCH_LIB,
                        SPARK_LAUNCHER,
